--- a/src/pages/main.css
+++ b/src/pages/main.css
@@ -15,18 +15,46 @@ body {
 	overflow: hidden;
 	position: absolute;
 	width: 681px;
-	height: 160px;
+	height: 800px;
 	z-index: 15;
   	top: 50%;
   	left: 50%;
-	margin: -80px 0 0 -340px;
+	margin: -200px 0 0 -340px;
 	background: url('oqk-logo.png') no-repeat;
-	/*border: 1px solid #f00;*/
 }
 
-#text{
-	margin: 130px 0 0 230px;
-	font-family:"Arial, Helvetica, sans-serif";
-	font-size: 20px;
+samp {
+	display:block;
+	margin: 130px 0 0 130px;
+	background: #000;
+	color: #ccc;
+	padding: 30px;
+	width: 400px;
 }
+
+figure{
+	margin-left: 0px;
+}
+
+samp ul{
+	width: 400px;
+	padding-left: 20px;
+	margin-left: 20px;
+
+}
+
+samp li{
+  	margin-left: 0px;
+}
+
+.tab { 
+	display:inline-block; 
+    margin-left: 10px; 
+}
+
+.tab2 { 
+	display:inline-block; 
+    margin-left: 70px; 
+}
+
 
